--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 </head>
 <body>
 
-  test
-
+    <header>
+      <h1>Simple, traffic-based pricing</h1>
+      <p>Sign-up for our 30-day trial. No credit card required.</p>
+    </header>
+    
 </body>
 </html>
