added range component

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
       <p>Sign-up for our 30-day trial. No credit card required.</p>
     </header>
     
+    <section class="pricing">
+      <h2 class="sr-only">Pricing details</h2>
+      <form action="#" class="pricing__form">
+        <strong class="pricing__views"><span id="views">100</span>k pageviews</strong>
+        <label for="pageViews" class="sr-only">Configure page views</label>
+        <input type="range" min="25" max="200" step="25" value="100" id="pageViews" name="pageViews" class="range">
+      </form>
+    </section>
 </body>
 </html>
