--- a/index.html
+++ b/index.html
@@ -23,8 +23,34 @@
       <h2 class="sr-only">Pricing details</h2>
       <form action="#" class="pricing__form">
         <strong class="pricing__views"><span id="views">100</span>k pageviews</strong>
-        <label for="pageViews" class="sr-only">Configure page views</label>
-        <input type="range" min="25" max="200" step="25" value="100" id="pageViews" name="pageViews" class="range">
+        <div class="pricing__group">
+          <label for="pageViews" class="sr-only">Configure page views</label>
+          <input type="range" min="25" max="200" step="25" value="100" id="pageViews" name="pageViews" class="range">
+        </div>
+        <strong>$<span id="money">16.00</span>/<span id="billing-type">month</span></strong>
+        <div class="pricing__toggle">
+          <label for="monthly">Monthly Billing</label>
+          <input id="monthly" type="radio" value="monthly billing" name="billing-variant" class="" checked><!-- Add sr-only class to visually remove the radio button -->
+          <div class="toggle" aria-hidden="true"></div>
+          <input id="yearly" type="radio" value="yearly billing" name="billing-variant" class=""><!-- Add sr-only class to visually remove the radio button -->
+          <label for="yearly">Yearly Billing</label>
+          <hr>
+        </div>
+        <ul class="pricing__benefits">
+          <li>
+            <img src="/images/icon-check.svg" alt="icon checked">
+            Unlimited websites
+          </li>
+          <li>
+            <img src="/images/icon-check.svg" alt="icon checked">
+            100% data ownership
+          </li>
+          <li>
+            <img src="/images/icon-check.svg" alt="icon checked">
+            Email reports
+          </li>
+        </ul>
+        <button class="cta">Start my trial</button>
       </form>
     </section>
 </body>
