styles complete final version

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             Email reports
           </li>
         </ul>
-        <button class="cta">Start my trial</button>
+        <button class="cta">
+          <span>Start my trial</span>
+        </button>
       </form>
     </section>
 
