--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     <section class="pricing">
       <h2 class="sr-only">Pricing details</h2>
       <form action="#" class="pricing__form">
-        <strong class="pricing__views"><span id="views">100</span>k pageviews</strong>
+        <strong class="pricing__views"><span id="views">245</span>k pageviews</strong>
         <div class="pricing__group">
-          <label for="pageViews" class="sr-only">Configure page views</label>
-          <div class="fakeRange" aria-hidden="true">
-            <span class="fakeRange__fill"></span>
-            <span class="fakeRange__thumb"></span>
+          <label for="pageViews" class="sr-only">Configure page views (price will be updated with views)</label>
+          <div id="fakeRange" class="fakeRange" aria-hidden="true">
+            <span id="fill" class="fakeRange__fill"></span>
+            <span id="thumb" class="fakeRange__thumb"></span>
           </div>
-          <input type="range" min="25" max="200" step="25" value="100" id="pageViews" name="pageViews" class="range sr-only">
+          <input type="range" min="1" max="100" step="1" value="50" id="pageViews" name="pageViews" class="range sr-only">
         </div>
-        <strong class="pricing__amount">$<span id="money">16.00</span> <span id="billing-type">/ month</span></strong>
+        <strong class="pricing__amount">$<span id="money">100.00</span> <span id="billing-type">/ month</span></strong>
         <div class="slider">
           <label for="monthly">Monthly Billing</label>
           <input id="monthly" type="radio" value="monthly billing" name="billing-variant" class="sr-only" checked>
@@ -61,6 +61,7 @@
       </form>
     </section>
 
-    <script src="/script/Script.js"></script>
+    <script src="/script/togglePrice.js"></script>
+    <script src="/script/range.js"></script>
 </body>
 </html>
