--- a/interactive-pricing-component-main/index.html
+++ b/interactive-pricing-component-main/index.html
@@ -19,7 +19,7 @@
       <p>Sign-up for our 30-day trial. No credit card required.</p>
     </header>
     
-    <section class="pricing">
+    <main class="pricing">
       <h2 class="sr-only">Pricing details</h2>
       <form action="#" class="pricing__form">
         <strong class="pricing__views"><span id="views">245</span>k pageviews</strong>
@@ -59,7 +59,7 @@
           <span>Start my trial</span>
         </button>
       </form>
-    </section>
+    </main>
 
     <script src="/script/togglePrice.js"></script>
     <script src="/script/range.js"></script>
